Actions
Bug #12951
closedserengeti: this statement may fall through
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC:
../../../sun4u/os/plat_ecc_unum.c ../../../sun4u/os/plat_ecc_unum.c: In function 'plat_ecc_capability_sc_get': ../../../sun4u/os/plat_ecc_unum.c:855:7: error: this statement may fall through [-Werror=implicit-fallthrough=] if (plat_ecc_capability_map_sc & ^ ../../../sun4u/os/plat_ecc_unum.c:858:3: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e98a9323520af2d37dd05c47dd174826c71b0c3a
commit e98a9323520af2d37dd05c47dd174826c71b0c3a Author: Toomas Soome <tsoome@me.com> Date: 2020-07-21T14:32:33.000Z 12951 serengeti: this statement may fall through Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions