12951 serengeti: this statement may fall through Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Approved by: Dan McDonald <danmcd@joyent.com>